--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -99,6 +99,7 @@
                         </div>
                     </form>
                 </div>
+                <div>{{user?.token}}</div>
             </div>
         </div>
     </section>
