--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,16 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+ .ng-valid:not(form).ng-touched{
+  border-left: 5px solid #42A948;
+ }
+
+ .ng-invalid:not(form).ng-touched{
+  border-left: 5px solid #a94442;
+ }
+
+ 
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
