Comunicacion inicio sesion y visibilidad botones header

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -99,7 +99,7 @@
                         </div>
                     </form>
                 </div>
-                <div>{{user?.token}}</div>
+                <div class="fw-bolder mt-2">{{user?.token}}</div>
             </div>
         </div>
     </section>
