--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -16,6 +16,7 @@
                   name="name" required />
                 <div *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger mt-1">
                   <div *ngIf="name.errors?.['required']">Introduzca su nombre</div>
+                  <div *ngIf="name.errors?.['maxlength']">Nombre demasiado largo</div>
                 </div>
               </div>
               <div class="mb-3">
@@ -24,6 +25,7 @@
                   name="surname" required />
                   <div *ngIf="surname.invalid && (surname.dirty || surname.touched)" class="text-danger mt-1">
                     <div *ngIf="surname.errors?.['required']">Introduzca sus apellidos</div>
+                    <div *ngIf="surname.errors?.['maxlength']">Apellidos demasiado largos</div>
                   </div>
               </div>
               <div class="mb-3">
@@ -31,6 +33,8 @@
                 <input formControlName="phone" type="text" class="registro__card-control form-control" id="phone" required />
                 <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="text-danger mt-1">
                   <div *ngIf="phone.errors?.['required']">Introduzca su teléfono</div>
+                  <div *ngIf="phone.errors?.['minlength']">El teléfono debe contener 9 dígitos</div>
+                  <div *ngIf="phone.errors?.['maxlength']">El teléfono debe contener 9 dígitos</div>
                 </div>
               </div>
               <div class="mb-3">
