--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
                             <div class="mb-3">
                                 <label for="user" class="login__card-label form-label">Usuario</label>
                                 <input type="email" class="login__card-control form-control" id="user" formControlName="email" required>
-                                <div *ngIf="email.invalid && (email.dirty || email.touched)" class="text-danger mt-1">
+                                <div *ngIf="email.invalid && (email.dirty || email.touched)" class="text-message mt-1">
                                     <div *ngIf="email.errors?.['required']">Introduzca su usuario</div>
                                     <div *ngIf="email.errors?.['email']">El usuario debe tener formato email</div>
                                 </div>
@@ -22,7 +22,7 @@
                             <div class="mb-4">
                                 <label for="password" class="login__card-label form-label">Contraseña</label>
                                 <input type="password" class="login__card-control form-control" id="password" formControlName="password" required>
-                                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-danger mt-1">
+                                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-message mt-1">
                                     <div *ngIf="password.errors?.['required']">Introduzca su contraseña</div>
                                 </div>
                                 <div class="text-danger mt-4 text-center">{{loginError}}</div>
