--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -52,9 +52,9 @@
                                 <div class="details__form-filters-precio">
                                     <label for="rangoPrecio"
                                         class="details__form-filters-precio-label form-label ms-2">Precio
-                                        máximo: <span id="rangoPrecio">50</span></label>
+                                        máximo: <span id="rangoPrecio">{{maxPrice}}</span></label>
                                     <input type="range" class="details__form-filters-precio-control form-range"
-                                        id="rangoPrecio" min="0" max="30000">
+                                        id="rangoPrecio" min="1" max="3000" [(ngModel)]="maxPrice" name="maxPrice">
                                 </div>
                             </div>
                             <div class="col-4">
@@ -103,7 +103,7 @@
                                 <div
                                     class="details__form-filters-categories d-flex flex-column justify-content-between align-items-start ms-2 my-2">
                                     <input type="checkbox" class="details__form-filters-check btn-check" id="casas"
-                                        autocomplete="off">
+                                        autocomplete="off" [(ngModel)]="houses" name="houses">
                                     <label
                                         class="details__form-filters-checklabel btn btn-outline-secondary d-flex justify-content-center align-items-center"
                                         for="casas">
@@ -116,7 +116,7 @@
                                             Chalets</span>
                                     </label>
                                     <input type="checkbox" class="details__form-filters-check btn-check"
-                                        id="hoteles" autocomplete="off">
+                                        id="hoteles" autocomplete="off" [(ngModel)]="hotels" name="hotels">
                                     <label
                                         class="details__form-filters-checklabel btn btn-outline-secondary d-flex justify-content-center  align-items-center"
                                         for="hoteles">
@@ -130,7 +130,7 @@
                                         <span class="details__form-filters-checklabel-text ms-2">Hoteles</span>
                                     </label>
                                     <input type="checkbox" class="details__form-filters-check btn-check"
-                                        id="albergues" autocomplete="off">
+                                        id="albergues" autocomplete="off" [(ngModel)]="hostels" name="hostels">
                                     <label
                                         class="details__form-filters-checklabel btn btn-outline-secondary d-flex justify-content-center  align-items-center"
                                         for="albergues">
@@ -142,7 +142,7 @@
                                         <span class="details__form-filters-checklabel-text ms-2">Albergues</span>
                                     </label>
                                     <input type="checkbox" class="details__form-filters-check btn-check"
-                                        id="bungalows" autocomplete="off">
+                                        id="bungalows" autocomplete="off" [(ngModel)]="bungalows" name="bungalows">
                                     <label
                                         class="details__form-filters-checklabel btn btn-outline-secondary d-flex justify-content-center align-items-center"
                                         for="bungalows">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="details__form-controls col-lg-2 pb-4 mt-4 mt-lg-2">
-                    <button class="details__form-submit btn btn-secondary" type="submit" [routerLink]="['/consulta']">BUSCAR</button>
+                    <button class="details__form-submit btn btn-secondary" type="submit" (click)="searchAccommodation()">BUSCAR</button>
                 </div>
             </div>
         </form>
