--- a/src/styles.css
+++ b/src/styles.css
@@ -13340,6 +13340,89 @@ body {
 .client__books-links:hover {
   transform: scale(1.2);
 }
+.client__modal-edit-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #272A57;
+}
+@media (min-width: 768px) {
+  .client__modal-edit-title {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-edit-form-input {
+  font-size: 1rem;
+  color: #272A57;
+}
+@media (min-width: 768px) {
+  .client__modal-edit-form {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-delete-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #272A57;
+}
+@media (min-width: 768px) {
+  .client__modal-delete-title {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-delete-warning {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #5B5E85;
+}
+@media (min-width: 768px) {
+  .client__modal-delete-warning {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-delete-buttons {
+  font-size: 1rem;
+}
+@media (min-width: 768px) {
+  .client__modal-delete-buttons {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-book-delete-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: #272A57;
+}
+@media (min-width: 768px) {
+  .client__modal-book-delete-title {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-book-delete-warning {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #5B5E85;
+}
+@media (min-width: 768px) {
+  .client__modal-book-delete-warning {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+.client__modal-book-delete-buttons {
+  font-size: 1rem;
+}
+@media (min-width: 768px) {
+  .client__modal-book-delete-buttons {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
 
 .footer {
   background-color: #272A57;
