Inclusión num personas inicio

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -78,6 +78,9 @@
                             <div class="inicio__card-info col-4 col-md-3 d-flex flex-column justify-content-end">
                                 <div>Fecha de salida</div>
                             </div>
+                            <div class="inicio__card-info col-4 col-md-3 offset-md-3 d-flex flex-column justify-content-end">
+                                <div>Nº personas</div>
+                            </div>
                         </div>
                         <div class="row mb-4">
                             <div class="col-4 col-md-3">
